trying to create premium build flavor

--- a/Converter/app/build.gradle
+++ b/Converter/app/build.gradle
@@ -13,6 +13,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        flavorDimensions "default"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -31,6 +33,15 @@ android {
     }
     buildFeatures {
         viewBinding = true
+    }
+
+    productFlavors {
+        basic {
+            applicationId "com.example.converter.basic"
+        }
+        premium {
+            applicationId "com.example.converter.premium"
+        }
     }
 }
 
