--- a/TabataTimer/app/build.gradle
+++ b/TabataTimer/app/build.gradle
@@ -33,6 +33,8 @@ android {
 
 dependencies {
 
+    implementation "androidx.legacy:legacy-preference-v14:1.0.0"
+    implementation "androidx.preference:preference:1.0.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
