--- a/TabataTimer/app/build.gradle
+++ b/TabataTimer/app/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "androidx.preference:preference:1.0.0"
     implementation 'androidx.core:core-ktx:1.7.0'
