--- a/TabataTimer/app/src/main/AndroidManifest.xml
+++ b/TabataTimer/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.TabataTimer"
         tools:targetApi="31">
         <activity
+            android:name=".TimerActivity"
+            android:exported="false" />
+        <activity
             android:name=".ActivityBase"
             android:exported="false" />
         <activity
